# py-nplus1loader

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
misc/_doc/: README.md.j2  README.py
myproject/: __init__.py
nplus1loader/: __init__.py  bulk_load.py  exc.py  loadopt.py  safeguard.py  strategies.py  util.py
nplusoneloader/: __init__.py  loadopt.py  strategies.py
tests/: conftest.py  const.py  db.py  models.py  nplusone_loader_test.py  play_with_events.py  query_logger.py  test_nplus1.py  test_nplus1_old.py
