[tool.poetry]
name = "nplus1loader"
version = "1.1.0"
description = "SqlAlchemy N+1 Loader: a solution to the N+1 problem"
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3.0"
funcy = "^1.10"

[tool.poetry.dev-dependencies]
exdoc = "^0.1.3"
j2cli = "^0.3.10"
psycopg2-binary = "^2.8.0"
PyMySQL = "^0.10.0"
cryptography = "^3.2.0"
pytest = "^6.1.2"
nox = "^2020.8.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
